changed JobTypesToPayService and RewardDTO for correct test